--- a/package.json
+++ b/package.json
@@ -12,10 +12,19 @@
     "build": "npm install --prefix frontend && npm run build --prefix frontend && npm install --prefix backend",
     "start": "cd backend && node app.js"
   },
-  "keywords": ["MERN", "Tasks","Task manager", "Full stack application"],
+  "keywords": [
+    "MERN",
+    "Tasks",
+    "Task manager",
+    "Full stack application"
+  ],
   "author": "Aayush",
   "license": "ISC",
   "devDependencies": {
     "concurrently": "^7.1.0"
+  },
+  "dependencies": {
+    "dotenv": "^16.3.1",
+    "mongoose": "^8.0.2"
   }
 }
